redefinir funciones a clases en el CRUD, cambiar las respectivas URLS y agregar confirm delete y eliminar de manera lógica

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>{% block titulo %}Bienvenido a Biblioteca.dev {% endblock titulo %}</title>
+    <title>{% block titulo %}Bienvenido a Biblioteca Aguará {% endblock titulo %}</title>
     <meta name="description" content="Ela Admin - HTML5 Admin Template">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -84,7 +84,7 @@
                             <div class="card bg-primary">
                                 <div class="card-body">
                                     <blockquote class="blockquote mb-0 text-light text-center">
-                                        <h1 class="text-light">BIENVENIDOS A BIBLIOTECA.DEV</h1>
+                                        <h1 class="text-light">BIENVENIDOS A BIBLIOTECA AGUARÁ</h1>
                                         <footer class="blockquote-footer text-light">"Google puede darte 100.00 respuestas, el Bibliotecario puede darte la correcta." -<cite title="Neil Gaiman">Neil Gaiman</cite></footer>
                                     </blockquote>
                                 </div>
