--- a/templates/libro/listar_autor.html
+++ b/templates/libro/listar_autor.html
@@ -1,7 +1,7 @@
 {% extends 'index.html' %}
 
 {% block titulo %}
-  Biblioteca.dev | Listado de Autores
+  Biblioteca Aguará | Listado de Autores
 {% endblock titulo %}
 
 {% block body %}
