--- a/templates/libro/crear_autor.html
+++ b/templates/libro/crear_autor.html
@@ -1,6 +1,6 @@
 {% extends 'index.html' %}
 {% block titulo %}
-  Biblioteca.dev | Registro de Autores
+  Biblioteca Aguará | Registro de Autores
 {% endblock titulo %}
 
 {% block body %}
@@ -16,20 +16,20 @@
           <div class="card-body card-block">
               <form method="post" enctype="multipart/form-data" class="form-horizontal">
                   <div class="row form-group">
-                      <div class="col col-md-3"><label for="text-input" class=" form-control-label">Nombres</label></div>
-                      <div class="col-12 col-md-9"><input type="text"  name="nombre" placeholder="Ingrese el nombre del autor" class="form-control"></div>
+                      <div class="col col-md-3">{{ form.nombre.label }}</div>
+                      <div class="col-12 col-md-9">{{ form.nombre }}</div>
                   </div>
                   <div class="row form-group">
-                      <div class="col col-md-3"><label for="text-input" class=" form-control-label">Apellidos</label></div>
-                      <div class="col-12 col-md-9"><input type="text"  name="apellidos" placeholder="Ingrese los apellidos del autor" class="form-control"></div>
+                      <div class="col col-md-3">{{ form.apellidos.label }}</div>
+                      <div class="col-12 col-md-9">{{ form.apellidos }}</div>
                   </div>
                   <div class="row form-group">
-                      <div class="col col-md-3"><label for="text-input" class=" form-control-label">Nacionalidad</label></div>
-                      <div class="col-12 col-md-9"><input type="text"  name="nacionalidad" placeholder="Ingrese la nacionalidad del autor" class="form-control"></div>
+                      <div class="col col-md-3">{{ form.nacionalidad.label }}</div>
+                      <div class="col-12 col-md-9">{{ form.nacionalidad }}</div>
                   </div>
                   <div class="row form-group">
-                      <div class="col col-md-3"><label for="textarea-input" class=" form-control-label">Descripción</label></div>
-                      <div class="col-12 col-md-9"><textarea name="descripcion"  placeholder="Ingrese una pequeña descripción del autor" class="form-control"></textarea></div>
+                      <div class="col col-md-3">{{ form.descripcion.label }}</div>
+                      <div class="col-12 col-md-9">{{ form.descripcion }}</div>
                   </div>
                   <div class="text-center">
                       <button type="submit" class="btn btn-primary">Registrar</button>
