--- a/templates/login.html
+++ b/templates/login.html
@@ -30,14 +30,22 @@
                 </div>
                 <div class="login-form">
                     <form method="POST">
-                      {% csrf_token %}
+                        {% csrf_token %}
                         <div class="form-group">
+                            {% if form.error_messages %}
+                            <div class="alert alert-danger alert-dismissible" role="alert">
+                                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                                <strong>Advertencia: </strong> {{ form.get_invalid_login_error }}
+                            </div>
+                            {% endif %}
                             <label>Nombre de Usuario</label>
-                            <input type="text" class="form-control" placeholder="Nombre de Usuario" name="username">
+                            {{ form.username }}
                         </div>
                         <div class="form-group">
                             <label>Contraseña</label>
-                            <input type="password" class="form-control" placeholder="Contraseña" name="password">
+                            {{ form.password }}
                         </div>
                         <button type="submit" class="btn btn-success btn-flat m-b-30 m-t-30">Iniciar Sesión</button>
                     </form>
@@ -45,6 +53,7 @@
             </div>
         </div>
     </div>
+
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@2.2.4/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.4/dist/umd/popper.min.js"></script>
